[project]
name = "cablenets"
version = "0.0.1"
authors = [
  { name="Jorge Pérez Zerpa", email="jorgepz@fing.edu.uy" },
]
description = "A Structural Cable Nets Solver"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "cvxopt",
]

[project.urls]
Homepage = "https://github.com/jorgepz/cablenets"
Issues = "https://github.com/jorgepz/cablenets/issues"