[project]
name = "cablenets"
version = "0.0.2"
authors = [
  { name="Jorge Pérez Zerpa", email="jorgepz@fing.edu.uy" },
]
description = "A Python Module for Structural Cable Nets Analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "matplotlib",
    "cvxopt",
]

[project.urls]
Homepage = "https://github.com/jorgepz/cablenets"
Issues = "https://github.com/jorgepz/cablenets/issues"